--- a/AboutMe.html
+++ b/AboutMe.html
@@ -37,7 +37,7 @@
                 <dl>
                     <dt>Стараться и изучать новое</dt>
                     <dd>Без этого никак</dd>
-                    <dt>Находить единомышленников и изучать новое</dt>
+                    <dt>Находить единомышленников и работать сообща</dt>
                     <dd>Без тоже этого никак</dd>
                 </dl>
                 <p><q>Историю пишут <i>победители,</i> а этот <i>крипер</i> явно проиграл</q> &copy; Я</p>
