--- a/AboutMe.html
+++ b/AboutMe.html
@@ -23,8 +23,8 @@
                 <h1>Мои навыки</h1>   
                 <ul>
                     <li>Пишу на C#, C++ и немножко Java</li>
-                    <li>Рисую и делаю дизайны</li>
-                    <li>Начинающий gamedev разработчик</li>
+                    <li>Чутка умею в pixel art</li>
+                    <li>Неплохо готовлю</li>
                 </ul>
                 <h3>Мой опыт</h2>
                     <ul>
