--- a/AboutMe.html
+++ b/AboutMe.html
@@ -23,6 +23,7 @@
                             </ul>  
                         </div>
                     </li>
+                    <li><a href="ChatAndMath.html" target="_blank">&#9654 Чат</a></li>
                 </ul>
 
                 <script>
