--- a/AboutMe.html
+++ b/AboutMe.html
@@ -14,7 +14,7 @@
                     <li><a href="#projects">&#9654 Мои цели</a></li>
                     <li><a href="#gallery">&#9654 Галерея</a></li>
                     <li><a href="#code">&#9654 Мой код</a></li>
-                    <li class="popup" onclick="Show('contactPopup')">&#9654 Контакты
+                    <li class="popup" onClick="Show('contactPopup')">&#9654 Контакты
                         <div class="popuptext" id="contactPopup">   
                             <ul>
                                 <li><a href="https://vk.com/id376659163" target="_blank">VK</a></li>
